--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "pricing-component-with-toggle",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ruben G. Villar",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "gulp": "^4.0.2"
+  },
+  "dependencies": {},
+  "description": ""
 }
