--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "author": "Ruben G. Villar",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^4.0.2"
+    "browser-sync": "^2.26.7",
+    "gulp": "^4.0.2",
+    "gulp-pug": "^4.0.1",
+    "gulp-sass": "^4.1.0"
   },
   "dependencies": {},
   "description": ""
