--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   "author": "Ruben G. Villar",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.1.0"
   },
